CRUD api for Lectures and few Frontend changes
