# Backend/routes/__init__.py
@@ -4,6 +4,7 @@ from .log_in_out import LoginResource,LogoutResource
 from .institute_resource import InstituteResource
 from .teachers_resource import TeacherResource
 from .unit_resource import UnitResource
+from lectures import LectureResource
 
 def init_routes(app):
     api = Api(app, prefix='/Finance_Tutor')
@@ -15,5 +16,7 @@ def init_routes(app):
     api.add_resource(InstituteResource,"/institute/<int:id>","/institute/signup")
     api.add_resource(TeacherResource,"/teacher","/teacher/<int:id>")
     api.add_resource(UnitResource,"/unit","/unit/<int:id>")
+    api.add_resource(LectureResource, '/lecture', '/lecture/<int:id>')
+
 
     
